--- a/libs/ennetree/package.json
+++ b/libs/ennetree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@4bitlabs/ennetree",
   "version": "0.0.0",
-  "description": "A basic ennetree (3×3 spatial division) for fast, efficient spatial queries",
+  "description": "A basic 2D ennetree (3×3 spatial division) for fast, efficient spatial queries",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -15,7 +15,8 @@
     "ennetree",
     "spatial",
     "spatial-query",
-    "quadtree"
+    "quadtree",
+    "2d"
   ],
   "author": "J. Holmes <32bitkid@gmail.com>",
   "license": "ISC",
