--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,8 @@
   "ignoreChanges": ["**/*.md"],
   "command": {
     "version": {
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "private": false
     }
   }
 }
