--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "isolatedDeclarations": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
