--- a/libs/quadtree/package.json
+++ b/libs/quadtree/package.json
@@ -4,6 +4,9 @@
   "description": "A basic 2D quadtree (2×2 spatial division) for fast, efficient spatial queries",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/32bitkid/4bitlabs.spatial/tree/main/libs/quadtree",
+  "bugs": "https://github.com/32bitkid/4bitlabs.spatial/issues",
+  "repository": "github:32bitkid/4bitlabs.spatial",
   "scripts": {
     "clean": "tsc --build --clean",
     "clean:wipe": "rimraf ./dist",
