--- a/libs/vector/package.json
+++ b/libs/vector/package.json
@@ -4,6 +4,9 @@
   "description": "A TypedArray-backed resizable vector data-structure",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/32bitkid/4bitlabs.spatial/tree/main/libs/vector",
+  "bugs": "https://github.com/32bitkid/4bitlabs.spatial/issues",
+  "repository": "github:32bitkid/4bitlabs.spatial",
   "scripts": {
     "clean": "tsc --build --clean",
     "clean:wipe": "rimraf ./dist",
