Docs: General improvements to documentation

--- a/libs/ennetree/package.json
+++ b/libs/ennetree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@4bitlabs/ennetree",
   "version": "1.0.5",
-  "description": "A basic 2D ennetree (3×3 spatial division) for fast, efficient spatial queries",
+  "description": "A simple 2D ennetree (3×3 spatial division) for fast, efficient spatial queries",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "homepage": "https://github.com/32bitkid/4bitlabs.spatial/tree/main/libs/ennetree",
